--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,17 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv"/>
 	<classpathentry kind="lib" path="yadrone_032.jar"/>
 	<classpathentry kind="lib" path="miglayout-4.0.jar"/>
+	<classpathentry kind="lib" path="lib/xuggle-xuggler-5.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-net-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/core.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-jdk14-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/reflections/guava-11.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/reflections/javassist-3.16.1-GA.jar"/>
+	<classpathentry kind="lib" path="lib/reflections/reflections-0.9.9-RC1.jar"/>
+	<classpathentry kind="lib" path="lib/zxing/core-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/zxing/javase-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
