--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="lib/zxing/javase-2.2.jar"/>
 	<classpathentry kind="lib" path="lib/miglayout-4.0.jar"/>
 	<classpathentry kind="lib" path="lib/yadrone_032.jar"/>
+	<classpathentry kind="lib" path="lib/zxing-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
